# budgetml-finance-advisor

./: .gitignore  README.md  pyproject.toml  requirements.txt  retrain_autocat_both.slurm  train_all.slurm  train_setfit.sh
api/: app.py  counterfactual.py  db.py  explainer.py
api/static/: index.html
config/: __init__.py  settings.yaml
data/: loader.py  pipeline.py  preprocessor.py  synthetic.py
models/: user_vae.py
models/baselines/: gradient_boosting.py  naive_bayes.py
models/embeddings/: description_classifier.py  merchant2vec.py
models/intelligence/: behavioral_bias_detector.py  cash_crunch_predictor.py  goal_inferencer.py  life_event_detector.py  local_llm.py  peer_comparator.py
models/pretraining/: masked_transaction_model.py
models/transformers/: anomaly_detection.py  base.py  bulk_buy_recommendation.py  contrastive_anomaly.py  spending_forecast.py
rules/: deal_finder.py  decision_engine.py  subscription_analyzer.py  time_value_calculator.py
scripts/: seed_test_user.py
tests/: test_auto_categorize.py  test_intelligence_detectors.py  test_narrative.py
training/: pretrain_masked.py  train_anomaly.py  train_baselines.py  train_bulk_buy.py  train_contrastive_anomaly.py  train_description_classifier.py  train_forecast.py  train_merchant2vec.py  train_user_vae.py  trainer.py
